<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Connect</string>
    
    <!-- Profile -->
    <string name="profile_title">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    
    <!-- Input fields -->
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_age">Age</string>
    <string name="hint_gmail">Gmail</string>
    <string name="hint_linkedin">LinkedIn</string>
    <string name="hint_github">GitHub</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>
    <string name="hint_instagram">Instagram</string>
    <string name="hint_website">Website</string>
    <string name="hint_phone">Phone</string>
    
    <!-- Main screen -->
    <string name="my_contacts">My Contacts</string>
    <string name="no_contacts">No contacts yet. Tap another phone with NFC to share contacts!</string>
    <string name="nfc_not_available">NFC is not available on this device</string>
    <string name="nfc_disabled">NFC is disabled. Please enable it in Settings</string>
    <string name="nfc_ready">Tap phones together to share contact</string>
    <string name="contact_received">Contact received via NFC!</string>
    <string name="contact_saved">Contact saved successfully!</string>
    
    <!-- Contact details -->
    <string name="contact_details">Contact Details</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="confirm_delete">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Messages -->
    <string name="profile_saved">Profile saved successfully!</string>
    <string name="profile_incomplete">Please fill in at least your name and surname</string>
    <string name="setup_profile_first">Please setup your profile first</string>
    
    <!-- Social media labels -->
    <string name="label_personal_info">Personal Information</string>
    <string name="label_social_links">Social Links</string>
    <string name="label_contact_info">Contact Information</string>
</resources>
